k8s-manifests/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hellokube
  namespace: hello
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hellokube
  template:
    metadata:
      annotations:
        kubernetes.io/change-cause: "use hellopy V5 with restricted PSA profile"
      labels:
        app: hellokube
    spec:
      containers:
        - name: hellopy
          image: quay.io/manue/hellopy:5
          livenessProbe:
            httpGet:
              path: /healthy
              port: 8080
            initialDelaySeconds: 3
            timeoutSeconds: 1
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
          resources:
            requests:
              cpu: "50m"
              ephemeral-storage: "10Mi"
              memory: "32Mi"
            limits:
              cpu: "9000m"
              ephemeral-storage: "200Mi" # fair approach, based disk free  95GB/ 500 pods  =190
              memory: "128Mi"
          ports:
            - containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            seccompProfile:
              type: "RuntimeDefault"
            capabilities:
              drop: ["ALL"]
