k8s-manifests/svc-loadbalancer.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hellokube
spec:
  selector:
    app: hellokube
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
