k8s-manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: hellokube
spec:
  port:
    targetPort: 8080
  to:
    kind: ""
    name: hellokube
    weight: null
